--- a/Aayojakah/Views/Home/portfolio.cshtml
+++ b/Aayojakah/Views/Home/portfolio.cshtml
@@ -11,12 +11,12 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Nova Bootstrap Template - Portfolio</title>
+    <title>Portfolio</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="~/assets/img/favicon.png" rel="icon">
+    <link href="~/ProjectLogo (1).png" rel="icon">
     <link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -52,7 +52,7 @@
             <a asp-controller="Home" asp-action="Index" class="logo d-flex align-items-center">
                 <!-- Uncomment the line below if you also wish to use an image logo -->
                 <!-- <img src="~/assets/img/logo.png" alt=""> -->
-                <h1 class="d-flex align-items-center">Nova</h1>
+                <h1 class="d-flex align-items-center" style="font-family:'Baskerville Old Face'">Aayojakah - The Organizers</h1>
             </a>
 
             <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -82,7 +82,7 @@
 
                 <h2>Portfolio</h2>
                 <ol>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                     <li>Portfolio</li>
                 </ol>
 
@@ -110,7 +110,7 @@
                                 <h4>App 1</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -120,7 +120,7 @@
                                 <h4>Product 1</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/product-1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -130,7 +130,7 @@
                                 <h4>Branding 1</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -140,7 +140,7 @@
                                 <h4>Books 1</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -150,7 +150,7 @@
                                 <h4>App 2</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/app-2.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -160,7 +160,7 @@
                                 <h4>Product 2</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/product-2.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -170,7 +170,7 @@
                                 <h4>Branding 2</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/branding-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -180,7 +180,7 @@
                                 <h4>Books 2</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/books-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -190,7 +190,7 @@
                                 <h4>App 3</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/app-3.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -200,7 +200,7 @@
                                 <h4>Product 3</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/product-3.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -210,7 +210,7 @@
                                 <h4>Branding 3</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/branding-3.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -220,7 +220,7 @@
                                 <h4>Books 3</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur</p>
                                 <a href="~/assets/img/portfolio/books-3.jpg" title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                                <a asp-controller="Home" asp-action="PortfolioDetails" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
                         </div><!-- End Portfolio Item -->
 
@@ -240,14 +240,19 @@
                 <div class="row gy-4">
                     <div class="col-lg-5 col-md-12 footer-info">
                         <a href="index.html" class="logo d-flex align-items-center">
-                            <span>Nova</span>
+                            <span>Aayojaka: ~ The Organizers</span>
                         </a>
-                        <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+                        <p>
+                            <br />
+                            Ayojakaha is a bright, colorful & stylish Event Planning website with a festive and elegant design.
+                            It is made to organize Professional as well as Functional events.
+
+                        </p>
                         <div class="social-links d-flex  mt-3">
-                            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                            <a href="https://twitter.com/" class="twitter"><i class="bi bi-twitter"></i></a>
+                            <a href="https://www.facebook.com/" class="facebook"><i class="bi bi-facebook"></i></a>
+                            <a href="https://www.instagram.com/" class="instagram"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.linkedin.com/" class="linkedin"><i class="bi bi-linkedin"></i></a>
                         </div>
                     </div>
 
@@ -257,30 +262,34 @@
                             <li><i class="bi bi-dash"></i> <a href="#">Home</a></li>
                             <li><i class="bi bi-dash"></i> <a href="#">About us</a></li>
                             <li><i class="bi bi-dash"></i> <a href="#">Services</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Privacy policy</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Portfolio</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Team</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Contact us</a></li>
+
+
                         </ul>
                     </div>
 
                     <div class="col-lg-2 col-6 footer-links">
                         <h4>Our Services</h4>
                         <ul>
-                            <li><i class="bi bi-dash"></i> <a href="#">Web Design</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Web Development</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Product Management</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Marketing</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Graphic Design</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Wedding Ceremony </a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Birthday Celebration </a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Family Function</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Farewell Party</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">College Fest</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Corporate Events</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
                         <h4>Contact Us</h4>
                         <p>
-                            A108 Adam Street <br>
-                            New York, NY 535022<br>
-                            United States <br><br>
+                            Plot No 26, Rajiv Gandhi Infotech Park, <br>
+                            Hinjawadi, Pune - 411057.<br>
+                            India <br><br>
                             <strong>Phone:</strong> +1 5589 55488 55<br>
-                            <strong>Email:</strong> info@example.com<br>
+                            <strong>Email:</strong> www.cognizant.com<br>
                         </p>
 
                     </div>
@@ -292,15 +301,9 @@
         <div class="footer-legal">
             <div class="container">
                 <div class="copyright">
-                    &copy; Copyright <strong><span>Nova</span></strong>. All Rights Reserved
+                    &copy; Copyright <strong><span>Aayojakah</span></strong>. All Rights Reserved
                 </div>
-                <div class="credits">
-                    <!-- All the links in the footer should remain intact. -->
-                    <!-- You can delete the links only if you purchased the pro version. -->
-                    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nova-bootstrap-business-template/ -->
-                    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                </div>
+
             </div>
         </div>
     </footer><!-- End Footer -->
