--- a/Aayojakah/Views/Shared/Error.cshtml
+++ b/Aayojakah/Views/Shared/Error.cshtml
@@ -9,6 +9,7 @@
     }
 
 </style>
+<link rel="shortcut icon" href="~/ProjectLogo (1).png">
 <div class="container">
     <div class="row">
         <div class="span12">
