--- a/Aayojakah/Views/Shared/_Layout.cshtml
+++ b/Aayojakah/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     </style>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="~/eventManagement.png">
+    <link rel="shortcut icon" href="~/ProjectLogo (1).png">
 
 
 
