--- a/Aayojakah/Views/Shared/_SuperAdminLayout.cshtml
+++ b/Aayojakah/Views/Shared/_SuperAdminLayout.cshtml
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="shortcut icon" href="~/eventManagement.png">
+    <link rel="shortcut icon" href="~/ProjectLogo (1).png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] Dashboard - @Context.Session.GetString("Username")</title>
