--- a/Aayojakah/wwwroot/assets/css/main.css
+++ b/Aayojakah/wwwroot/assets/css/main.css
@@ -771,7 +771,9 @@ section {
 # Call To Action Section
 --------------------------------------------------------------*/
 .call-to-action {
-  background: linear-gradient(rgba(27, 47, 69, 0.8), rgba(27, 47, 69, 0.8)), url("../img/cta-bg.jpg") center center;
+  background: linear-gradient(rgba(27, 47, 69, 0.8), rgba(27, 47, 69, 0.8)), url("../img/HomePageFirstImage.jpg") center center;
+  
+  
   background-size: cover;
   padding: 100px 0;
 }
